Update file HTML

--- a/index.html
+++ b/index.html
@@ -92,8 +92,9 @@
 
   <section id="contact">
     <h2>Kontak</h2>
+    <p>No HP/WA: <a>+6281219946735</a></p>
     <p>Email: <a href="mailto:ryanyakhin4@gmail.com">ryanyakhin4@gmail.com</a></p>
-    <p>GitHub: <a href="https://github.com/USERNAME_KAMU" target="_blank">github.com/USERNAME_KAMU</a></p>
+    <p>GitHub: <a href="https://github.com/Ryan-Yakhin" target="_blank">https://github.com/Ryan-Yakhin</a></p>
   </section>
 
   <footer>
