Update keahlian html & css

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <ul>
       <li>Flutter & Dart</li>
       <li>Java</li>
+      <li>HTML & CSS</li>
       <li>REST API Integration</li>
       <li>UI/UX Mobile</li>
       <li>Git & GitHub</li>
